# VapeGeh

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  boost.json  composer.json  package-lock.json  package.json  vite.config.js
.github/workflows/: build-apk.yml  build.yml
app/Actions/: AdjustStock.php  BuildReceiptPrintData.php  CompleteStockTransfer.php  CreateSale.php  DeleteLocation.php  DeleteSale.php  UpdateSale.php
app/Livewire/: ReceiptPrinterModal.php
app/Models/: Buyer.php  Expense.php  Income.php  Location.php  Product.php  ProductPrice.php  Sale.php  SaleItem.php  Stock.php  StockEntry.php  StockEntryItem.php  StockMovement.php  StockTransfer.php  StockTransferItem.php  User.php  Vendor.php
bootstrap/: app.php
config/: invoices.php  laravel-pdf.php  nativephp.php  store.php
mobile/: capacitor.config.ts  package-lock.json  package.json  tsconfig.json
mobile/www/: index.html  (+1 more)
public/: manifest.json
routes/: api.php  web.php
src-tauri/: Cargo.toml  splashscreen.html  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/plugins/printer/: Cargo.toml  build.rs
src-tauri/plugins/printer/permissions/: default.toml
src-tauri/plugins/printer/permissions/autogenerated/: reference.md
src-tauri/plugins/printer/permissions/autogenerated/commands/: list_printers.toml  print_receipt.toml
src-tauri/plugins/printer/permissions/schemas/: schema.json
src-tauri/plugins/printer/src/: bluetooth.rs  commands.rs  connection.rs  error.rs  escpos.rs  lib.rs  mobile.rs  usb.rs
src-tauri/src/: lib.rs  main.rs
(+231 files in other folders)
