[package]
name = "tauri-plugin-printer"
links = "tauri-plugin-printer"
version = "0.1.0"
description = "Tauri plugin for Bluetooth ESC/POS printer discovery and printing"
authors = ["ItsAzni"]
edition = "2021"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
schemars = "0.8"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serialport = "4"
async-trait = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd", "rfcomm"] }
uuid = "1"
async-trait = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android-activity = "0.6"

[lib]
name = "tauri_plugin_printer"
